--- a/EvidencePojisteniWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/EvidencePojisteniWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -74,21 +74,20 @@
                 </div>
             </div>
         </div>
+
+        <div class="row text-center">
+            <p>
+                <a id="forgot-password" class="text-black text-e" asp-page="./forgotpassword">Zapomněli jste heslo?</a>
+            </p>
+            <p>
+                <a asp-page="./register" class="text-black" asp-route-returnurl="@Model.ReturnUrl">Zaregistrovat se jako nový uživatel.</a>
+            </p>
+            <p>
+                <a id="resend-confirmation" class="text-black" asp-page="./resendemailconfirmation">Znovu odeslat potvrzovací e-mail.</a>
+            </p>
+        </div>
     </div>
 </div>
-
-
-@* <div>
-    <p>
-        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-    </p>
-    <p>
-        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-    </p>
-    <p>
-        <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-    </p>
-</div> *@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
