--- a/EvidencePojisteniWeb/Views/Pojistenec/Index.cshtml
+++ b/EvidencePojisteniWeb/Views/Pojistenec/Index.cshtml
@@ -23,7 +23,7 @@
 
     <div class="row text-center mt-4">
         <div class="col">
-            <a role="button" class="btn btn-primary" asp-action="Create">Nový pojištěnec</a>
+            <a role="button" class="btn btn-primary" asp-page="/Account/Register" asp-area="Identity">Nový pojištěnec</a>
         </div>
     </div>
 
