--- a/EvidencePojisteniWeb/Areas/Identity/Pages/_LoginPartial.cshtml
+++ b/EvidencePojisteniWeb/Areas/Identity/Pages/_LoginPartial.cshtml
@@ -8,11 +8,11 @@
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
-            <a class="nav-link text-warning" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+            <a class="nav-link text-info" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Ahoj @User.Identity?.Name</a>
         </li>
         <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" class="border-primary rounded-2 bg-dark text-warning mt-0 p-2 p">Logout</button>
+                <button type="submit" class="border-danger rounded-2 bg-dark text-danger mt-0 p-2">Odhlásit se</button>
             </form>
         </li>
     }
@@ -21,12 +21,12 @@
         <li class="nav-item ">
             <a class="nav-link text-light @(ViewContext.RouteData.Values["page"]?.ToString()
                          ==
-                       "/Account/Register" ? "active fw-bold" : "")" asp-area="Identity" asp-page="/Account/Register">Register</a>
+                       "/Account/Register" ? "active fw-bold" : "")" asp-area="Identity" asp-page="/Account/Register">Registrace</a>
     </li>
     <li class="nav-item">
         <a class="nav-link text-light @(ViewContext.RouteData.Values["page"]?.ToString()
                      ==
-                   "/Account/Login" ? "active fw-bold" : "")" asp-area="Identity" asp-page="/Account/Login">Login</a>
+                   "/Account/Login" ? "active fw-bold" : "")" asp-area="Identity" asp-page="/Account/Login">Přihlásit se</a>
     </li>
         }
 </ul>
