Refaktor navigačního menu: - Použití `currentController == "Pojistenec"` místo `ViewContext.RouteData` pro zvýraznění položky Pojištěnci - Aktualizace `asp-controller="Pojistenec"` a textu odkazu na “Pojištěnci” - Použití `currentController == "Pojisteni"` pro zvýraznění položky Pojištění - Aktualizace `asp-controller="Pojisteni"` a textu odkazu na “Pojištění” - Použití `currentController == "PojistnaUdalost"` pro zvýraznění položky Události - Aktualizace `asp-controller="PojistnaUdalost"` a textu odkazu na “Události” - Použití `currentController == "Home" && currentAction == "About"` pro položku O projektu - Aktualizace `asp-action="About"` a textu odkazu na “O projektu” - Použití `currentController == "Home" && currentAction == "Privacy"` pro položku GDPR - Aktualizace `asp-action="Privacy"` a textu odkazu na “GDPR”

--- a/EvidencePojisteniWeb/Views/Home/Index.cshtml
+++ b/EvidencePojisteniWeb/Views/Home/Index.cshtml
@@ -16,12 +16,12 @@
 
 <div class="container">
     <header class="pb-2 mb-4 border-bottom">
-        <h3 href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
+        <h3 class="d-flex align-items-center text-body-emphasis text-decoration-none">
             @ViewData["Title"]
         </h3>
     </header>
 
-    <div class="p-4 mb-4 bg-body-tertiary rounded-3">
+    <div class="p-4 mb-4 bg-body-tertiary rounded-3 border bg-light shadow-lg">
         <div class="container-fluid py-4">
             <h3 class="display-4 fw-bold">Evidence Pojisteni Web.cz</h3>
 
@@ -37,14 +37,14 @@
 
     <div class="row align-items-md-stretch">
         <div class="col-md-6">
-            <div class="h-100 p-4 text-bg-success rounded-3">
+            <div class="h-100 p-4 text-bg-success rounded-3 shadow-lg">
                 <h2>Pojištění</h2>
                 <p>Stačí kliknout a podívat se v rychlém přehledu jaké možnosti tyto stránky nabízejí.</p>
                 <a class="btn btn-outline-light" type="button" asp-controller="Pojisteni" asp-action="Index">Podívat se na pojištění</a>
             </div>
         </div>
         <div class="col-md-6">
-            <div class="h-100 p-4 bg-body-tertiary border rounded-3">
+            <div class="h-100 p-4 bg-body-tertiary border rounded-3 bg-light shadow-lg">
                 <h2>Přihlášení na naše stránky</h2>
                 <p>
                     Přihlášení na stránky Evidence pojištění Vás posune blíž k jistějším zítřkům. S námi se můžete cítit ve větším
