--- a/EvidencePojisteniWeb/Views/PojisteniOsoby/Create.cshtml
+++ b/EvidencePojisteniWeb/Views/PojisteniOsoby/Create.cshtml
@@ -7,7 +7,7 @@
 
 <div class="container">
     <header class="pb-2 border-bottom">
-        <h4 href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
+        <h4 class="d-flex align-items-center text-body-emphasis text-decoration-none">
             @ViewData["Title"] pro &nbsp;<strong>@pojistenec?.Jmeno @pojistenec?.Prijmeni</strong>
         </h4>
     </header>
