--- a/EvidencePojisteniWeb/Views/Pojistenec/Delete.cshtml
+++ b/EvidencePojisteniWeb/Views/Pojistenec/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container">
     <header class="pb-2 border-bottom">
-        <h3 href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
+        <h3 class="d-flex align-items-center text-body-emphasis text-decoration-none">
             @ViewData["Title"]
         </h3>
     </header>
