--- a/EvidencePojisteniWeb/Views/PojistnaUdalost/Index.cshtml
+++ b/EvidencePojisteniWeb/Views/PojistnaUdalost/Index.cshtml
@@ -20,7 +20,7 @@
 
 <div class="container">
     <header class="pb-2 border-bottom mb-4">
-        <h3 href="/" class="d-flex align-items-center text-body-emphasis text-decoration-none">
+        <h3 class="d-flex align-items-center text-body-emphasis text-decoration-none">
             @ViewData["Title"]
         </h3>
     </header>
