Drobná úprava header jednotlivých View -přidán shadow-lg, rounded-3; Vytvoření AutoLoginu - přidání DemoController a použití ve footer;

--- a/EvidencePojisteniWeb/Views/Pojistenec/Index.cshtml
+++ b/EvidencePojisteniWeb/Views/Pojistenec/Index.cshtml
@@ -15,7 +15,7 @@
 @await Html.PartialAsync("_Breadcrumb", bcItems)
 
 <div class="container">
-    <header class="pb-2 border-bottom">
+    <header class="p-2 border-bottom shadow-lg rounded-3">
         <h3 class="d-flex align-items-center text-body-emphasis text-decoration-none">
             @ViewData["Title"]
         </h3>
@@ -28,7 +28,7 @@
     </div>
 
     <div class="col mt-4">
-        <div class="table-responsive rounded-3 overflow-hidden">
+        <div class="table-responsive rounded-3 overflow-hidden shadow-lg">
             <table class="table table-hover table-bordered mb-2">
                 @if (Model.Count > 0)
                 {
@@ -115,7 +115,7 @@
     </div>
 
     <div class="row">
-        <nav class="" aria-label="Stránkování">
+        <nav class="mt-2" aria-label="Stránkování">
             <ul class="pagination justify-content-center">
                 <!-- pro větší čí menší .pagination-sm .pagination-lg-->
                 <li class="page-item @(Model.HasPreviousPage ? "" : "disabled")">
