--- a/EvidencePojisteniWeb/Views/Pojisteni/Index.cshtml
+++ b/EvidencePojisteniWeb/Views/Pojisteni/Index.cshtml
@@ -15,7 +15,7 @@
 @await Html.PartialAsync("_Breadcrumb", bcItems)
 
 <div class="container mt-4">
-    <header class="pb-2 border-bottom">
+    <header class="p-2 border-bottom shadow-lg rounded-3">
         <h3 class="d-flex align-items-center text-body-emphasis text-decoration-none">
             Přehled typů pojištění
         </h3>
