--- a/EvidencePojisteniWeb/Views/Shared/_Layout.cshtml
+++ b/EvidencePojisteniWeb/Views/Shared/_Layout.cshtml
@@ -87,7 +87,11 @@
 
     <footer class="border-top footer text-muted footer-fixed">
         <div class="container d-flex justify-content-center">
-            &copy; 2025 - Evidence pojištění -&nbsp;<a asp-area="" asp-controller="Home" asp-action="Index">App</a>&nbsp;vytvořil Patkin.cz
+            &copy; 2025 - Evidence pojištění - App vytvořil &nbsp;
+                <a asp-controller="Demo" asp-action="LoginAsAdmin">
+                    Patkin.cz
+                </a>
+            &nbsp;- auto login pro DEMO.
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
