--- a/EvidencePojisteniWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/EvidencePojisteniWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -14,7 +14,7 @@
 @await Html.PartialAsync("_Breadcrumb", bcItems)
 
 <div class="container">
-    <header class="pb-2 mb-3 border-bottom">
+    <header class="p-2 mb-3 border-bottom shadow-lg rounded-3">
         <h3 class="text-body-emphasis">@ViewData["Title"]</h3>
     </header>
 
