--- a/EvidencePojisteniWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/EvidencePojisteniWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,7 +13,7 @@
 @await Html.PartialAsync("_Breadcrumb", bcItems)
 
 <div class="container">
-    <header class="pb-2 border-bottom">
+    <header class="p-2 border-bottom shadow-lg rounded-3">
         <h3 class="d-flex align-items-center text-body-emphasis text-decoration-none">
             @ViewData["Title"]
         </h3>
