--- a/EvidencePojisteniWeb/Views/Home/About.cshtml
+++ b/EvidencePojisteniWeb/Views/Home/About.cshtml
@@ -15,7 +15,7 @@
 @await Html.PartialAsync("_Breadcrumb", bcItem)
 
 <div class="container">
-    <header class="pb-2 border-bottom">
+    <header class="p-2 border-bottom shadow-lg rounded-3">
         <h3 class="d-flex align-items-center text-body-emphasis text-decoration-none">
             @ViewData["Title"]
         </h3>
@@ -39,7 +39,7 @@
             </div>
 
             <div class="container">
-                <div class="row g-4 mb-5 pb-3 shadow-lg">
+                <div class="row g-4 mb-5 pb-3 rounded-3">
                     @foreach (var tech in Model)
                     {
                         <div class="col-6 col-md-4 col-lg-2">
