--- a/EvidencePojisteniWeb/Views/Home/Privacy.cshtml
+++ b/EvidencePojisteniWeb/Views/Home/Privacy.cshtml
@@ -15,7 +15,7 @@
 @await Html.PartialAsync("_Breadcrumb", bcItem)
 
 <div class="container">
-    <header class="pb-2 border-bottom">
+    <header class="p-2 border-bottom shadow-lg rounded-3">
         <h3 class="d-flex align-items-center text-body-emphasis text-decoration-none">
             @ViewData["Title"]
         </h3>
