--- a/EvidencePojisteniWeb/Views/Pojisteni/TypDetail.cshtml
+++ b/EvidencePojisteniWeb/Views/Pojisteni/TypDetail.cshtml
@@ -28,7 +28,7 @@
 @await Html.PartialAsync("_Breadcrumb", bcItems)
 
 <div class="container mt-4">
-    <header class="pb-2 mb-4 border-bottom">
+    <header class="p-2 mb-4 border-bottom shadow-lg rounded-3">
         <h3 class="d-flex align-items-center text-body-emphasis text-decoration-none">
             @Model.Nazev
         </h3> 
