--- a/EvidencePojisteniWeb/Views/PojisteniOsoby/Create.cshtml
+++ b/EvidencePojisteniWeb/Views/PojisteniOsoby/Create.cshtml
@@ -6,7 +6,7 @@
 }
 
 <div class="container">
-    <header class="pb-2 border-bottom">
+    <header class="p-2 border-bottom shadow-lg rounded-3">
         <h4 class="d-flex align-items-center text-body-emphasis text-decoration-none">
             @ViewData["Title"] pro &nbsp;<strong>@pojistenec?.Jmeno @pojistenec?.Prijmeni</strong>
         </h4>
