--- a/EvidencePojisteniWeb/Views/PojisteniOsoby/Delete.cshtml
+++ b/EvidencePojisteniWeb/Views/PojisteniOsoby/Delete.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container">
-    <header class="pb-2 border-bottom">
+    <header class="p-2 border-bottom shadow-lg rounded-3">
         <h4 class="d-flex align-items-center text-body-emphasis text-decoration-none">
             @ViewData["Title"]
         </h4>
