--- a/EvidencePojisteniWeb/Views/PojistnaUdalost/Index.cshtml
+++ b/EvidencePojisteniWeb/Views/PojistnaUdalost/Index.cshtml
@@ -19,7 +19,7 @@
 @await Html.PartialAsync("_Breadcrumb", bcItems)
 
 <div class="container">
-    <header class="pb-2 border-bottom mb-4">
+    <header class="p-2 border-bottom mb-4 shadow-lg rounded-3">
         <h3 class="d-flex align-items-center text-body-emphasis text-decoration-none">
             @ViewData["Title"]
         </h3>
