Uprav UI identity a domovských stránek
- Přidán odkaz “Zpět na domovskou” na stránce Login pro snadný návrat
- Odstraněny nadbytečné `using Azure.Core` a prázdné řádky v Register.cshtml.cs
- Změněn styl tlačítka “Zpět na úvod” v About.cshtml z `btn-light` na `btn-outline-light`
- V Index.cshtml injektován `SignInManager` a `UserManager`
- Přidána podmínka pro zobrazení odkazu:
  • pokud je přihlášený uživatel → “Vstupte do portálu”
  • jinak → tlačítka “Zaregistrujte se” a “Přihlaste se”

--- a/EvidencePojisteniWeb/Views/Home/About.cshtml
+++ b/EvidencePojisteniWeb/Views/Home/About.cshtml
@@ -34,7 +34,7 @@
                             class="link-light fw-bold" target="_blank">C# .NET Basic</a>
                             na ITnetwork.
                     </p>
-                    <a href="/" class="btn btn-light btn-lg">Zpět na úvod</a>
+                    <a href="/" class="btn btn-outline-light btn-lg">Zpět na úvod</a>
                 </div>
             </div>
 
