--- a/EvidencePojisteniWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/EvidencePojisteniWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -75,6 +75,10 @@
             </div>
         </div>
 
+        <div class="mt-5">
+            <a class="btn btn-outline-secondary" asp-controller="Home" asp-action="Index">Zpět na domovskou</a>
+        </div>
+
         <div class="row text-center">
             <p>
                 <a id="forgot-password" class="text-black text-e" asp-page="./forgotpassword">Zapomněli jste heslo?</a>
