--- a/EvidencePojisteniWeb/Views/PojistnaUdalost/Index.cshtml
+++ b/EvidencePojisteniWeb/Views/PojistnaUdalost/Index.cshtml
@@ -25,53 +25,61 @@
         </h3>
     </header>
 
-    <!-- Tabulka 1: Statistiky událostí podle typu pojištění -->
-    <h4>Události podle typu pojištění</h4>
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th>Typ pojištění</th>
-                <th>Počet událostí</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var s in Model.StatsByInsuranceType)
-            {
-                <tr>
-                    <td>@s.TypPojisteni</td>
-                    <td>@s.PocetUdalosti</td>
-                </tr>
-            }
-        </tbody>
-    </table>
+    <div class="row">
+        <div class="col-md-6">
+            <!-- Tabulka 1: Statistiky událostí podle typu pojištění -->
+            <h4>Události podle typu pojištění</h4>
+            <table class="table table-striped table-bordered rounded-3">
+                <thead>
+                    <tr>
+                        <th>Typ pojištění</th>
+                        <th>Počet událostí</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var s in Model.StatsByInsuranceType)
+                    {
+                        <tr>
+                            <td>@s.TypPojisteni</td>
+                            <td>@s.PocetUdalosti</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
 
-    <!-- Tabulka 2: Počty klientů -->
-    <h4>Počty klientů</h4>
-    <table class="table table-bordered">
-        <tr><th>Celkem klientů</th><td>@Model.Counts.CelkovyPocetKlientu</td></tr>
-        <tr><th>Pojistníci</th><td>@Model.Counts.PocetPojistniku</td></tr>
-        <tr><th>Pojištěnci</th><td>@Model.Counts.PocetPojistencu</td></tr>
-    </table>
+        <!-- Tabulka 2: Sumy škod podle typu pojištění -->
+        <div class="col-md-6">
+            <h4>Celkové částky škod podle typu pojištění</h4>
+            <table class="table table-hover table-bordered rounded-3">
+                <thead>
+                    <tr>
+                        <th>Typ pojištění</th>
+                        <th>Celková částka škod</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var s in Model.SumByInsuranceType)
+                    {
+                        <tr>
+                            <td>@s.TypPojisteni</td>
+                            <td>@s.CelkovaCastka.ToString("C")</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
 
-    <!-- Tabulka 3: Sumy škod podle typu pojištění -->
-    <h4>Celkové částky škod podle typu pojištění</h4>
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th>Typ pojištění</th>
-                <th>Celková částka škod</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var s in Model.SumByInsuranceType)
-            {
-                <tr>
-                    <td>@s.TypPojisteni</td>
-                    <td>@s.CelkovaCastka.ToString("C")</td>
-                </tr>
-            }
-        </tbody>
-    </table>
+    <!-- Tabulka 3: Počty klientů -->
+    <div>
+        <h4>Počty klientů</h4>
+        <table class="table table-bordered">
+            <tr><th>Celkem klientů</th><td>@Model.Counts.CelkovyPocetKlientu</td></tr>
+            <tr><th>Pojistníci</th><td>@Model.Counts.PocetPojistniku</td></tr>
+            <tr><th>Pojištěnci</th><td>@Model.Counts.PocetPojistencu</td></tr>
+        </table>
+    </div>
 
     <!-- Podmíněné akce přihlášeného pojištěnce -->
     @if (User.Identity.IsAuthenticated && User.IsInRole("Pojistenec"))
